--- a/T/ToaBaja/ToaBaja.html
+++ b/T/ToaBaja/ToaBaja.html
@@ -12,62 +12,74 @@
   <h2>Lugares turísticos en Toa Baja</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Isla de Cabras</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Esta pequeña isla conectada por tierra tiene algunas de las mejores vistas de la Bahía de San Juan y el área del Viejo San Juan.
+      En la isla, encontrará instalaciones recreativas y estacionamiento en el lugar. El parque es un gran lugar para caminar y pescar.
     </p>
     <p>
+      Pueden visitar la Isla de Cabras en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/VSAepzUDtFt8Z6dh8">Palo Seco, Toa Baja 00949</a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Balneario Punta Salinas</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Administrada por el programa de parques nacionales de Puerto Rico, esta playa cuenta con instalaciones que solo tienen ciertas playas de la isla.
+      Entre las instalaciones que encontrarás en esta playa se encuentran duchas, baños, áreas verdes para la recreación, canchas de baloncesto,
+      área de voleibol de playa y socorristas.
     </p>
-    Pueden visitar en:
+    Pueden visitar el Balneario Punta Salinas en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/uRLUcZYrLtY61wGN6">FRF7+GH6, PR-165, Sabana Seca, 00949</a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>El Cañuelo</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Fortín San Juan de la Cruz, conocido localmente como El Cañuelo, está localizado en Isla de Cabras, Puerto Rico. 
+      Es parte del Sitio Histórico Nacional de San Juan, Patrimonio de la Humanidad desde 1983.
+      Este fuerte fue originalmente construido en madera en 1610.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar El Cañuelo en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/KeuUizatVU7baMha9">FV87+HC5, PR-870, Palo Seco, Toa Baja, Puerto Rico, Toa Baja 00949</a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Playa Parchola</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Esto es una play hermosa de aguas cristalinas en Toa Baja.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Playa Parchola en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/7xeJYbmzspv41Lvu9">FQ8P+FVM, PR-165, Toa Baja, Dorado 00949</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>La Cabaña (787)-784-8484</li>
+    <li>El Kampestre (787)-261-1188</li>
+    <li>La Mina Mexicana (787)-261-3147</li>
+    <li>Millie's Place (787)-784-3488</li>
+    <li>Queen's Pizza & Grill (787)-794-4200</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Festival Banda de Música - Agosto</li>
+    <li>Festival de Artesanía - Marzo</li>
+    <li>Festival Playero - julio</li>
+    <li>Fiestas de Navidad - Diciembre</li>
+    <li>Fiestas Patronales de San Pedro Apóstol - Junio</li>
   </ul>
   </div>
 </body>
