--- a/T/ToaBaja/ToaBaja.html
+++ b/T/ToaBaja/ToaBaja.html
@@ -25,7 +25,7 @@
       </ul>
     </p>
     <h2>Balneario Punta Salinas</h2>
-    <img src="" width="80%" height="30%">
+    <img src="191-3-14158_jpeg0-1eaab3925056a36_1eaab5f1-5056-a36a-08a60615ef24ce88.jpeg" width="80%" height="30%">
     <p class="text">
       Administrada por el programa de parques nacionales de Puerto Rico, esta playa cuenta con instalaciones que solo tienen ciertas playas de la isla.
       Entre las instalaciones que encontrarás en esta playa se encuentran duchas, baños, áreas verdes para la recreación, canchas de baloncesto,
