--- a/T/ToaBaja/ToaBaja.html
+++ b/T/ToaBaja/ToaBaja.html
@@ -38,7 +38,7 @@
       </ul>
     </p>
     <h2>El Cañuelo</h2>
-    <img src="" width="80%" height="30%">
+    <img src="123.jpeg" width="80%" height="30%">
     <p class="text">
       El Fortín San Juan de la Cruz, conocido localmente como El Cañuelo, está localizado en Isla de Cabras, Puerto Rico. 
       Es parte del Sitio Histórico Nacional de San Juan, Patrimonio de la Humanidad desde 1983.
