--- a/T/ToaBaja/ToaBaja.html
+++ b/T/ToaBaja/ToaBaja.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Isla de Cabras</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Isla-de-Cabras-01.jpeg" width="80%" height="30%">
     <p class="text">
       Esta pequeña isla conectada por tierra tiene algunas de las mejores vistas de la Bahía de San Juan y el área del Viejo San Juan.
       En la isla, encontrará instalaciones recreativas y estacionamiento en el lugar. El parque es un gran lugar para caminar y pescar.
