--- a/T/ToaBaja/ToaBaja.html
+++ b/T/ToaBaja/ToaBaja.html
@@ -51,7 +51,7 @@
       </ul>
     </p>
     <h2>Playa Parchola</h2>
-    <img src="" width="80%" height="30%">
+    <img src="hang-around-and-float.jpeg" width="80%" height="30%">
     <p class="text">
       Esto es una play hermosa de aguas cristalinas en Toa Baja.
     </p>
