--- a/T/TrujilloAlto/TrujilloAlto.html
+++ b/T/TrujilloAlto/TrujilloAlto.html
@@ -57,7 +57,7 @@
       </ul>
     </p>
     <h2>Casa de la Cultura</h2>
-    <img src="" width="80%" height="30%">
+    <img src="790A2251 Trujillo Alto-2.jpeg" width="80%" height="30%">
     <p class="text">
       Es un recinto donde convergen el pasado y el presente de Trujillo Alto a través de su historia. 
       Este edificio, dedicado a la memoria del historiador trujillano Pedro Regalado Díaz Rivera (Don Tito), está ubicado en la calle Muñoz Rivera, 
