--- a/T/TrujilloAlto/TrujilloAlto.html
+++ b/T/TrujilloAlto/TrujilloAlto.html
@@ -27,7 +27,7 @@
       </ul>
     </p>
     <h2>Antigua Casa Alcaldía</h2>
-    <img src="" width="80%" height="30%">
+    <img src="LYMA9809-1-_0BFF8796-5056-A36A-08A0BA3E259A2EC6-0bff86bf5056a36_0bff8816-5056-a36a-0858ca11ffeb9f54.jpeg" width="80%" height="30%">
     <p class="text">
       Este edificio data de 1928, se utilizó hasta el 2006 como el Centro de Administración Municipal pero fue remodelado y reconstruido en el 2012.
       Dicha estructura, es dedicada a la memoria de la ex alcaldesa, Elsie Calderón Rodríguez. Actualmente, este edificio alberga las oficinas de 
