--- a/T/TrujilloAlto/TrujilloAlto.html
+++ b/T/TrujilloAlto/TrujilloAlto.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Parque La Cascada</h2>
-    <img src="" width="80%" height="30%">
+    <img src="parque-recreativo-la.jpeg" width="80%" height="30%">
     <p class="text">
       Ampliando la oferta cultural y turística del pueblo y engalanando la entrada al Barrio Pueblo, al lado del centro comercial Plaza Encantada 
       se ubica el emblemático Parque La Cascada, el cual constituye un nuevo ícono para los trujillanos. Rodeado de un hermoso espacio natural, cuenta
