--- a/T/TrujilloAlto/TrujilloAlto.html
+++ b/T/TrujilloAlto/TrujilloAlto.html
@@ -22,8 +22,9 @@
       anfiteatro y pérgola, un kiosco para la venta de comida, área para consumo, bancos, jardines paisajistas y estacionamiento.  
     </p>
     <p>
+      Pueden visitar el Parque La Cascada en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/23LCSxJpEANECunw7">9X4W+7FV, Carr. 181, Trujillo Alto, 00976</a></li>
       </ul>
     </p>
     <h2>Antigua Casa Alcaldía</h2>
@@ -34,14 +35,14 @@
       Desarrollo Comunal, Servicios al Ciudadano, Vivienda, Alianza Municipal de Servicios Integrados y la Oficina de Servicios a Personas con 
       Impedimentos
     </p>
-    Pueden visitar en:
+    Pueden visitar la Antigua Casa Alcaldía en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/77CvzumkMiNzvk5M7">Trujillo Alto, 00976</a></li>
       </ul>
     </p>
     <h2>Embalse Río Grande de Loíza</h2>
-    <img src="" width="80%" height="30%">
+    <img src="rio-grande-de-loiza-canovanas1.jpeg" width="80%" height="30%">
     <p class="text">
       El embalse cubre un área aproximada de 1,000 cuerdas de terreno en los barrios Carraízo y La Gloria de Trujillo Alto, Celada y Rincón de 
       Gurabo y San Antonio, Río Cañas y Bairoa de Caguas. Se nutre de las aguas del Río Grande de Loíza y sus tributarios: el Río Caguitas, Bairoa,
@@ -51,9 +52,9 @@
       de San Juan. Su área de capacitación es de 797 kilómetros cuadrados.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Embalse Río Grande de Loíza en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/rtqbKjmtNdGxy9i18">8XHM+63V, PR-175, Trujillo Alto, 00976</a></li>
       </ul>
     </p>
     <h2>Casa de la Cultura</h2>
@@ -67,20 +68,20 @@
       del Departamento de Educación, Arte, Cultura y Turismo. 
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Casa de la Cultura en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/rGppB2ADmrk9K7dq8">9X3V+F5J, Cll Muñoz Rivera, Trujillo Alto, 00976</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>El balcón de Maelo (787)-730-2003</li>
+    <li>El Bosquecito Familiar (787)-283-1212</li>
+    <li>Piscolabis Mexicanos (939)-639-3372</li>
+    <li>Manny's Pizza (787)-748-6690</li>
+    <li>Guachile Tacos Food Truck (787)-600-1092</li>
   </ul>
   </div>
   <h2>Eventos</h2>
