--- a/U/Utuado/Utuado.html
+++ b/U/Utuado/Utuado.html
@@ -12,18 +12,28 @@
   <h2>Lugares turísticos en Utuado</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Puente de Hamaca de Utuado</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+       La construcción del puente fue por la necesidad que había para esa comunidad llamada “El verde” que no tenía conexión con San José que es
+      la urbanización que da al otro lado del puente.
+<br>
+<br>
+  “La Hamaca” se convirtió en un emblema del barrio. La comunidad de “El Verde” tiene alrededor de 125 familias, que actualmente utilizan el puente
+      para tener acceso a la carretera 123.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Cañón Blanco</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Encontrarás esta joya escondida en la región montañosa central de Puerto Rico, específicamente en el pueblo de Utuado. 
+      Mágico, hermoso y majestuoso son solo algunas de las palabras que pueden usarse para describir a Cañón Blanco. Llegar a este lugar 
+      requiere un poco de caminata, pero una vez que llegues verás que valió la pena. Además de un hermoso paisaje, esté atento a los petroglifos 
+      indígenas grabados en algunas de las grandes rocas de la zona.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +41,13 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Batey Adventures</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Batey Zipline Adventure es una empresa familiar con más de diez años de experiencia en ecoturismo. 
+      Estamos ubicados en el Barrio Ángeles del Municipio de Utuado, justo frente al Parque Ceremonial Indígena de Caguana. 
+      Desde hace diez años, combinamos experiencias educativas con aventuras en la naturaleza como caminatas por el bosque, visitas a las cuevas 
+      y cavernas del río Tanamá y aventuras con más adrenalina como el rapel y los tours en tirolesa o canopy.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +55,11 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Charco Los Morones</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Encontrará Charco Los Morones en uno de los municipios más grandes de Puerto Rico: Utuado. Una vez en la zona del río, encontrarás 
+      encantadoras piscinas naturales, exuberante vegetación y el estado de ánimo tranquilo que se obtiene al estar rodeado por las montañas de la isla.
     </p>
     <p>
       Pueden visitar en:
@@ -65,9 +81,11 @@
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Festival Tierra Adentro - Abril</li>
+    <li>Fiesta del Barrio Ángeles - Marzo</li>
+    <li>Fiestas de Guarionex - Abril</li>
+    <li>Fiestas Patronales de San Miguel Arcángel - Septiembre</li>
+    <li>Rosario de Cruz - mayo</li>
   </ul>
   </div>
 </body>
