--- a/U/Utuado/Utuado.html
+++ b/U/Utuado/Utuado.html
@@ -42,7 +42,7 @@
       </ul>
     </p>
     <h2>Batey Adventures</h2>
-    <img src="" width="80%" height="30%">
+    <img src="26025824_1983270005031402_7187963589533021808_o.jpeg" width="80%" height="30%">
     <p class="text">
       Batey Zipline Adventure es una empresa familiar con más de diez años de experiencia en ecoturismo. 
       Estamos ubicados en el Barrio Ángeles del Municipio de Utuado, justo frente al Parque Ceremonial Indígena de Caguana. 
