--- a/U/Utuado/Utuado.html
+++ b/U/Utuado/Utuado.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Puente de Hamaca de Utuado</h2>
-    <img src="" width="80%" height="30%">
+    <img src="92f933bc8d6706abe5aad5f8f7fb620d.jpeg" width="80%" height="30%">
     <p class="text">
        La construcción del puente fue por la necesidad que había para esa comunidad llamada “El verde” que no tenía conexión con San José que es
       la urbanización que da al otro lado del puente.
