--- a/U/Utuado/Utuado.html
+++ b/U/Utuado/Utuado.html
@@ -28,7 +28,7 @@
       </ul>
     </p>
     <h2>Cañón Blanco</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Canon-Blanco-Rio-Caonillas-Utuado-Puerto-Rico.jpeg" width="80%" height="30%">
     <p class="text">
       Encontrarás esta joya escondida en la región montañosa central de Puerto Rico, específicamente en el pueblo de Utuado. 
       Mágico, hermoso y majestuoso son solo algunas de las palabras que pueden usarse para describir a Cañón Blanco. Llegar a este lugar 
