--- a/U/Utuado/Utuado.html
+++ b/U/Utuado/Utuado.html
@@ -56,7 +56,7 @@
       </ul>
     </p>
     <h2>Charco Los Morones</h2>
-    <img src="" width="80%" height="30%">
+    <img src="acct_name_30625_2_e524b206-5056-a36a-081c32" width="80%" height="30%">
     <p class="text">
       Encontrará Charco Los Morones en uno de los municipios más grandes de Puerto Rico: Utuado. Una vez en la zona del río, encontrarás 
       encantadoras piscinas naturales, exuberante vegetación y el estado de ánimo tranquilo que se obtiene al estar rodeado por las montañas de la isla.
