--- a/U/Utuado/Utuado.html
+++ b/U/Utuado/Utuado.html
@@ -23,8 +23,9 @@
       para tener acceso a la carretera 123.
     </p>
     <p>
+       Pueden visitar el Puente de Hamaca de Utuado en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/WoayAy8WJN6e7Azj8">77PV+RCH, Utuado, 00641</a></li>
       </ul>
     </p>
     <h2>Cañón Blanco</h2>
@@ -35,10 +36,10 @@
       requiere un poco de caminata, pero una vez que llegues verás que valió la pena. Además de un hermoso paisaje, esté atento a los petroglifos 
       indígenas grabados en algunas de las grandes rocas de la zona.
     </p>
-    Pueden visitar en:
+    Pueden visitar el Cañón Blanco en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/oJgs4f93jgpGPYav5">Utuado 00664</a></li>
       </ul>
     </p>
     <h2>Batey Adventures</h2>
@@ -50,9 +51,9 @@
       y cavernas del río Tanamá y aventuras con más adrenalina como el rapel y los tours en tirolesa o canopy.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar Batey Adventures en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/Rne3Hm8We8ftmvbbA">Route 111, 110 28 mi Km 48.7 (3, Utuado, 00641</a></li>
       </ul>
     </p>
     <h2>Charco Los Morones</h2>
@@ -62,20 +63,20 @@
       encantadoras piscinas naturales, exuberante vegetación y el estado de ánimo tranquilo que se obtiene al estar rodeado por las montañas de la isla.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Charco Los Morones en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/fy4gyhx1sgu9w6Xr6">67MH+4CG, Utuado 00641</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Andares Bistro Café (787)-680-1700</li>
+    <li>Tavo's Pizza (787)-894-1853</li>
+    <li>La Parada (787)-814-1668</li>
+    <li>La Casita Criolla (787)-313-1782</li>
+    <li>Jonnette (787)-544-4648</li>
   </ul>
   </div>
   <h2>Eventos</h2>
