--- a/V/VegaAlta/VegaAlta.html
+++ b/V/VegaAlta/VegaAlta.html
@@ -12,18 +12,24 @@
   <h2>Lugares turísticos en Vega Alta</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Playa Cerro Gordo</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      La playa en sí es una larga franja en forma de media luna de delicada arena blanca, bordeada de palmeras y otros árboles que brindan sombra,
+      así como glorietas, mesas de picnic y duchas. El agua es de un azul brillante con olas suaves y un fondo arenoso, lo que la convierte en una 
+      playa perfecta para bañarse, una rareza en la accidentada costa norte de la isla.
     </p>
     <p>
+       Pueden visitar la Playa Cerro Gordo en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>San Juan Artisan Distillers</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      San Juan Artisan Distillers es la única destilería en Puerto Rico que elabora un ron a base de jugo de caña de azúcar: molemos nuestra caña, 
+      fermentamos y destilamos, creando el primer y único ron Estate Distilled elaborado 100% desde la finca hasta la botella en la misma propiedad.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +37,10 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Cerromar Beach</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Esta es una playa hermosa en el pueblo de vega alta con arenas suaves y placenteras.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +48,11 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Centro Gran Caribe</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Centro Gran Caribe fue construído en 1987 bajo el nombre de Plaza Caribe. En 1999 fue completada su expansión compuesta por dos secciones, 
+      norte y sur conectadas por un puente peatonal en cristal y a partir de ese momento se le llama Centro Gran Caribe
     </p>
     <p>
       Pueden visitar en:
@@ -65,9 +74,8 @@
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Fiestas Patronales de La Inmaculada Concepción de María - Diciembre</li>
+    <li>Festival de Cometas - Julio</li>
   </ul>
   </div>
 </body>
