--- a/V/VegaAlta/VegaAlta.html
+++ b/V/VegaAlta/VegaAlta.html
@@ -49,7 +49,7 @@
       </ul>
     </p>
     <h2>Centro Gran Caribe</h2>
-    <img src="" width="80%" height="30%">
+    <img src="321279-resized.jpeg" width="80%" height="30%">
     <p class="text">
       Centro Gran Caribe fue construído en 1987 bajo el nombre de Plaza Caribe. En 1999 fue completada su expansión compuesta por dos secciones, 
       norte y sur conectadas por un puente peatonal en cristal y a partir de ese momento se le llama Centro Gran Caribe
