--- a/V/VegaAlta/VegaAlta.html
+++ b/V/VegaAlta/VegaAlta.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Playa Cerro Gordo</h2>
-    <img src="" width="80%" height="30%">
+    <img src="RutAventura-PR-22-Balneario-Cerro-Gordo-Vega-Alta-20190310-_MGL0950.jpeg" width="80%" height="30%">
     <p class="text">
       La playa en sí es una larga franja en forma de media luna de delicada arena blanca, bordeada de palmeras y otros árboles que brindan sombra,
       así como glorietas, mesas de picnic y duchas. El agua es de un azul brillante con olas suaves y un fondo arenoso, lo que la convierte en una 
