--- a/V/VegaAlta/VegaAlta.html
+++ b/V/VegaAlta/VegaAlta.html
@@ -38,7 +38,7 @@
       </ul>
     </p>
     <h2>Cerromar Beach</h2>
-    <img src="" width="80%" height="30%">
+    <img src="cerromar-beach.jpeg" width="80%" height="30%">
     <p class="text">
       Esta es una playa hermosa en el pueblo de vega alta con arenas suaves y placenteras.
     </p>
