--- a/V/VegaAlta/VegaAlta.html
+++ b/V/VegaAlta/VegaAlta.html
@@ -22,19 +22,19 @@
     <p>
        Pueden visitar la Playa Cerro Gordo en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/Kqcr5YxzjRtUXsJP7">Sabana, Vega Alta 00646</a></li>
       </ul>
     </p>
     <h2>San Juan Artisan Distillers</h2>
-    <img src="" width="80%" height="30%">
+    <img src="tres+clavos-1.jpeg" width="80%" height="30%">
     <p class="text">
       San Juan Artisan Distillers es la única destilería en Puerto Rico que elabora un ron a base de jugo de caña de azúcar: molemos nuestra caña, 
       fermentamos y destilamos, creando el primer y único ron Estate Distilled elaborado 100% desde la finca hasta la botella en la misma propiedad.
     </p>
-    Pueden visitar en:
+    Pueden visitar San Juan Artisan Distillers en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/LiiiWWpENQGXthWc9">PR-690, KM 3.2, 00692</a></li>
       </ul>
     </p>
     <h2>Cerromar Beach</h2>
@@ -43,9 +43,9 @@
       Esta es una playa hermosa en el pueblo de vega alta con arenas suaves y placenteras.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar Cerromar Beach en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/ZpqzrszEc7poZ2ML6">FMGH+J65, Unnamed Road, Dorado, Vega Alta 00646</a></li>
       </ul>
     </p>
     <h2>Centro Gran Caribe</h2>
@@ -55,20 +55,20 @@
       norte y sur conectadas por un puente peatonal en cristal y a partir de ese momento se le llama Centro Gran Caribe
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Centro Gran Caribe en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/nEQDhQQouAV8CVtT8">State Road #2 Km. 29.7 Espinosa Ward, Vega Alta, 00692</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>La Placita de Guisín (787)-226-6064</li>
+    <li>En el Paseo Restaurant y Sport Bar (787)-883-4539</li>
+    <li>Cosechando Bar & Grill (787)-921-5010</li>
+    <li>El Batey (939)-259-6904</li>
+    <li>El Rey del Mofongo (939)-289-6631</li>
   </ul>
   </div>
   <h2>Eventos</h2>
