--- a/V/VegaBaja/VegaBaja.html
+++ b/V/VegaBaja/VegaBaja.html
@@ -12,18 +12,23 @@
   <h2>Lugares turísticos en Vega Baja</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Manantial Tortuguero Spring</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Manantial de Tortuguero es una piscina de agua cristalina que es alimentada por un manantial natural, rodeada de mucha vegetación.
+      Se encuentra alrededor de la zona de la Reserva Natural Tortuguero de Vega Baja y Manatí.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Casa y Museo Alonso</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Museo Casa Alonso es el museo oficial de arte e historia de Vega Baja y se encuentra dentro de uno de los mejores ejemplos de 
+      arquitectura del siglo XIX en Puerto Rico. En el museo encontrarás obras de arte, documentos históricos relacionados con la historia del pueblo
+      y objetos personales pertenecientes a algunos de los poetas puertorriqueños más famosos.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +36,12 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Manantial Ojo de Agua</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Localizado en medio de una comunidad Vegabajense, el manantial de Ojo de Agua contiene un espacio perfecto para que la comunidad se
+      divierta y admire la belleza del lugar. Entre peces de colores y alga que crece naturalmente, el Ojo de Agua en Vega Baja es el lugar perfecto 
+      para gozar en familia. Hay aceras a su alrededor, algunas a la sombra, por lo que puede traer una silla de plata y ver a los niños jugar.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +49,14 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Reserva Natural Pantano Cibuco</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Pantano Cibuco, declarado reserva natural en 1992 y ampliado en 1998, incluye unas 1,000 cuerdas de terreno integradas por el estuario 
+      del río Cibuco y los manglares de su entorno (alrededor de 398 cuerdas), los arrecifes de Punta Garza y humedales.  Su principal acceso es por 
+      la carretera PR-692 que bordea la costa en dirección a la Villa Pesquera y el Club Náutico de este municipio. La  importancia de este pantano 
+      radica en función de refugio y vivero de vida silvestre, barrera costera del oleaje, depósito de aguas de lluvias y control de escorrentías 
+      durante inundaciones.  
     </p>
     <p>
       Pueden visitar en:
