--- a/V/VegaBaja/VegaBaja.html
+++ b/V/VegaBaja/VegaBaja.html
@@ -50,7 +50,7 @@
       </ul>
     </p>
     <h2>Reserva Natural Pantano Cibuco</h2>
-    <img src="" width="80%" height="30%">
+    <img src="20200910_064312.jpeg" width="80%" height="30%">
     <p class="text">
       El Pantano Cibuco, declarado reserva natural en 1992 y ampliado en 1998, incluye unas 1,000 cuerdas de terreno integradas por el estuario 
       del río Cibuco y los manglares de su entorno (alrededor de 398 cuerdas), los arrecifes de Punta Garza y humedales.  Su principal acceso es por 
