--- a/V/VegaBaja/VegaBaja.html
+++ b/V/VegaBaja/VegaBaja.html
@@ -24,7 +24,7 @@
       </ul>
     </p>
     <h2>Casa y Museo Alonso</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Unknown.jpeg" width="80%" height="30%">
     <p class="text">
       El Museo Casa Alonso es el museo oficial de arte e historia de Vega Baja y se encuentra dentro de uno de los mejores ejemplos de 
       arquitectura del siglo XIX en Puerto Rico. En el museo encontrarás obras de arte, documentos históricos relacionados con la historia del pueblo
