--- a/V/VegaBaja/VegaBaja.html
+++ b/V/VegaBaja/VegaBaja.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Manantial Tortuguero Spring</h2>
-    <img src="" width="80%" height="30%">
+    <img src="manantial-de-tortuguero-vega-baja.jpeg" width="80%" height="30%">
     <p class="text">
       El Manantial de Tortuguero es una piscina de agua cristalina que es alimentada por un manantial natural, rodeada de mucha vegetación.
       Se encuentra alrededor de la zona de la Reserva Natural Tortuguero de Vega Baja y Manatí.
