--- a/V/VegaBaja/VegaBaja.html
+++ b/V/VegaBaja/VegaBaja.html
@@ -19,8 +19,9 @@
       Se encuentra alrededor de la zona de la Reserva Natural Tortuguero de Vega Baja y Manatí.
     </p>
     <p>
+      Pueden visitar el Manantial Tortuguero Spring en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/MgUYUJhm5ocYCRNy8">FH9H+QCF, Cll Venus, Vega Baja, 00693</a></li>
       </ul>
     </p>
     <h2>Casa y Museo Alonso</h2>
@@ -30,23 +31,23 @@
       arquitectura del siglo XIX en Puerto Rico. En el museo encontrarás obras de arte, documentos históricos relacionados con la historia del pueblo
       y objetos personales pertenecientes a algunos de los poetas puertorriqueños más famosos.
     </p>
-    Pueden visitar en:
+    Pueden visitar la Casa y Museo Alonso en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/5mf2CE6LPdw3P6R2A">CJV7+JF4, C. Betances, Vega Baja, 00693</a></li>
       </ul>
     </p>
     <h2>Manantial Ojo de Agua</h2>
-    <img src="" width="80%" height="30%">
+    <img src="ojo-agua-vega-baja-1.jpeg" width="80%" height="30%">
     <p class="text">
       Localizado en medio de una comunidad Vegabajense, el manantial de Ojo de Agua contiene un espacio perfecto para que la comunidad se
       divierta y admire la belleza del lugar. Entre peces de colores y alga que crece naturalmente, el Ojo de Agua en Vega Baja es el lugar perfecto 
       para gozar en familia. Hay aceras a su alrededor, algunas a la sombra, por lo que puede traer una silla de plata y ver a los niños jugar.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Manantial Ojo de Agua en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/gG9hEsSqiikFhhmh8">CJX2+X48, Cll Amapola, Vega Baja, 00693</a></li>
       </ul>
     </p>
     <h2>Reserva Natural Pantano Cibuco</h2>
@@ -59,28 +60,28 @@
       durante inundaciones.  
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Reserva Natural Pantano Cibuco en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/Fw611yow9PuyDsMD8">FJH8+3CF, Vega Baja, 00693</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Bocaíto Bar & Restaurant (787)-807-1346</li>
+    <li>El Fogón (787)-858-6201</li>
+    <li>UP Restaurant & Bar (787)-654-8333</li>
+    <li>Mi Viejo Café Bar & Grill (787)-621-9139</li>
+    <li>Pollos Robby (787)-855-0685</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Feria Sociocultural - Mayo</li>
+    <li>Fiestas Patronales de Nuestra Virgen del Rosario - Octubre</li>
+    <li>Maratón Melao Melao - Octubre</li>
   </ul>
   </div>
 </body>
