--- a/V/Vieques/Vieques.html
+++ b/V/Vieques/Vieques.html
@@ -26,7 +26,7 @@
       </ul>
     </p>
     <h2>Museo El Fortín de Conde Mirasol</h2>
-    <img src="" width="80%" height="30%">
+    <img src="243366-Vieques-Island.jpeg" width="80%" height="30%">
     <p class="text">
       El Fortín Conde de Mirasol fue el último fortín construido por los españoles en América. 
       Se asienta sobre una hermosa colina que domina el pueblo de Isabel Segunda en Vieques y los cayos cercanos. 
