--- a/V/Vieques/Vieques.html
+++ b/V/Vieques/Vieques.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Faro de Verdiales</h2>
-    <img src="" width="80%" height="30%">
+    <img src="9801730996_fc30404c35_b.jpeg" width="80%" height="30%">
     <p class="text">
        El Faro de Puerto Ferro está ubicado en la costa sur de la isla de Vieques, en la punta Cayo Verdiales. 
       Este faro de quinto orden, cuya luz tenía un alcance de 12 millas, es muy parecido al de Punta Mulas, que se encuentra en la 
